# rosbag2json

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/scripts/: rosbag2json.yaml
data/converted_bags/: .gitignore
data/recorded_bags/: .gitignore
scripts/: rosbag2json.py
